# new-repo

./: README.md  TESTING.md  add_sample_events.py  config.py  index.html  main.py  pyproject.toml  replit.md  script.js  setup_webhook.py  styles.css  ПОДРОБНОЕ_ОПИСАНИЕ.md
attached_assets/: Pasted---1762545913803_1762545913803.txt
database/: connection.py  models.py  repository.py
scheduler/: scheduler.py  tasks.py
services/: event_service.py  fsm_service.py  notification_service.py  registration_service.py  user_service.py
telegram/: handlers.py  keyboards.py  states.py
utils/: formatters.py  validators.py
